<resources>
    <string name="app_name">Hungray</string>
    <string name="txt_breakfast">Breakfast</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="dessert">Dessert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummyName">Garlic Butter Shrimp</string>
    <string name="_1_2_k">1.2 K</string>
    <string name="cooked">Cooked</string>
    <string name="txt_detail">Detail</string>
    <string name="txt_imageview">Imageview</string>
    <string name="_7_2">7.2</string>
    <string name="txt_calories">Calories</string>
    <string name="txt_carbo">Carbo</string>
    <string name="txt_protein">Protein</string>
    <string name="txt_description">Description</string>
    <string name="txt_recipes">Recipes</string>
    <string name="txt_ingredients">Ingredients :</string>
    <string name="txt_instructions">Instructions</string>
</resources>