<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.DetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/abhu"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:id="@+id/clTollBar"
            app:expandedTitleTextAppearance="@style/expandedBarStyle"
            app:title="@string/txt_detail">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/foreground_transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_shrimp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/ivDetail"
                android:contentDescription="@string/txt_imageview"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@string/dummyName"
                android:textColor="@color/white"
                android:textSize="@dimen/_28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tvNameDetail"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:theme="?attr/actionBarTheme"
            app:layout_collapseMode="pin"
            android:id="@+id/tbDetail"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_40dp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_20dp"
                app:cardBackgroundColor="@color/abhu"
                android:layout_marginTop="@dimen/_20dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/cvCalories">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/_7_2"
                    android:textSize="@dimen/_24sp"
                    android:id="@+id/tvCalories"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_calories"
                    android:textSize="@dimen/_12sp"
                    android:layout_marginBottom="@dimen/_300dp"
                    android:id="@+id/tvCaloriesLabel"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_6dp"
                app:cardBackgroundColor="@color/coral"
                android:layout_marginTop="@dimen/_20dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintBottom_toBottomOf="@id/cvCalories"
                app:layout_constraintStart_toEndOf="@id/cvCalories"
                android:id="@+id/cvCarbo">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/_7_2"
                    android:textSize="@dimen/_24sp"
                    android:id="@+id/tvCarbo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_carbo"
                    android:textSize="@dimen/_12sp"
                    android:layout_marginBottom="@dimen/_300dp"
                    android:id="@+id/tvCarboLabel"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_6dp"
                app:cardBackgroundColor="@color/kuning"
                android:layout_marginTop="@dimen/_20dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintStart_toEndOf="@id/cvCarbo"
                app:layout_constraintBottom_toBottomOf="@id/cvCarbo"
                android:id="@+id/cvProtein">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/_7_2"
                    android:textSize="@dimen/_24sp"
                    android:id="@+id/tvProtein"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_protein"
                    android:textSize="@dimen/_12sp"
                    android:layout_marginBottom="@dimen/_300dp"
                    android:id="@+id/tvProteinLabel"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_40dp"
                android:text="@string/txt_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvCalories"
                android:id="@+id/tvDetailDescription"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/txt_recipes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDetailDescription"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/tvLabelRecipes"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/txt_ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelRecipes"
                android:id="@+id/tvLabelIngredients"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/txt_ingredients"
                android:layout_marginTop="@dimen/_5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelIngredients"
                android:id="@+id/tvIngredients"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvIngredients"
                android:id="@+id/tvLabelInstructions"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@string/txt_instructions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelInstructions"/>







        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

