<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragment.BreakfastFragment">
<androidx.constraintlayout.widget.ConstraintLayout

    android:id="@+id/clBreakfast"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_50dp">



    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_breakfast"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBreakfast"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_shrimp"
            android:foreground="@drawable/foreground_transparent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sp"
                android:text="@string/dummyName"
                android:id="@+id/tvNameBreakfastMain"
                android:maxLength="20"
                android:ellipsize="end"/>

            <LinearLayout
                android:layout_width="@dimen/_80dp"
                android:layout_height="@dimen/_50dp"
                android:layout_alignParentEnd="true"
                android:orientation="vertical"
                android:background="@drawable/rounded_shape">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6dp"
                    android:gravity="center"
                    android:text="@string/_1_2_k"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/tvNumber"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sp"
                    android:text="@string/cooked"
                    android:id="@+id/tvCooked"/>

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/llBreakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvBreakfast">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/breakfast"
            android:background="@color/white"
            android:id="@+id/ibBreakfast"
            android:layout_margin="8dp"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/vegetarian"
            android:background="@color/white"
            android:id="@+id/ibVegetarian"
            android:layout_margin="8dp"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/dessert"
            android:background="@color/white"
            android:id="@+id/ibDessert"
            android:layout_margin="8dp"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sea_food"
            android:background="@color/white"
            android:id="@+id/ibSeafood"
            android:layout_margin="8dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvTitleListBreakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_breakfast"
        android:textSize="@dimen/_24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBreakfast" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBreakfast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleListBreakfast"
        tools:listitem="@layout/item_recipe"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
